feat(emission-factors): us 2020 numbers rerun

--- a/config/zones/US-AK.yaml
+++ b/config/zones/US-AK.yaml
@@ -9,6 +9,9 @@ currency: USD
 emissionFactors:
   direct:
     biomass:
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -21,7 +24,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1054.589992
+      value: 1054.5899917811341
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1040.2108414955262
@@ -34,7 +37,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 470.7986093
+      value: 470.79860929575693
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 442.92371913492497
@@ -45,6 +48,10 @@ emissionFactors:
       source: eGrid 2023
       value: 454.4318787852343
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -60,7 +67,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 713.1828107
+      value: 713.1828106549987
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 663.8839597479941
@@ -72,6 +79,10 @@ emissionFactors:
       value: 682.5489198648306
   lifecycle:
     biomass:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -86,9 +97,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1061.619377
+      source: eGrid 2020; IPCC 2014
+      value: 1114.5899917811341
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1100.2108414955262
@@ -101,7 +111,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 590.7986093
+      value: 590.7986092957569
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 562.923719134925
@@ -112,6 +122,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 574.4318787852343
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -127,7 +141,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 957.1828107
+      value: 957.1828106549987
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 907.8839597479941
