--- a/config/zones/US-CAR-CPLE.yaml
+++ b/config/zones/US-CAR-CPLE.yaml
@@ -284,7 +284,7 @@ emissionFactors:
       value: 256.5720652928129
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -298,7 +298,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 937.9666611
+      value: 970.9110841826375
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1021.5404864286071
@@ -311,7 +311,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 394.223375
+      value: 394.22337502764384
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 401.1166854159786
@@ -322,6 +322,10 @@ emissionFactors:
       source: eGrid 2023
       value: 391.6090306908343
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -357,6 +361,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 256.5720652928129
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -402,9 +410,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 347.02
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 216.6227355
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -419,9 +428,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1059.9982231
+      source: eGrid 2020; IPCC 2014
+      value: 1030.9110841826375
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1081.540486428607
@@ -434,7 +442,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 514.223375
+      value: 514.2233750276439
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 521.1166854159786
@@ -445,6 +453,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 511.6090306908343
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -492,6 +504,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
