--- a/config/zones/US-FLA-SEC.yaml
+++ b/config/zones/US-FLA-SEC.yaml
@@ -106,6 +106,9 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 699.4161197629264
     biomass:
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -118,7 +121,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 964.3118179
+      value: 964.3118179231524
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 940.1477267918307
@@ -131,7 +134,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 386.3298038
+      value: 386.32980375424796
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 387.4041558239329
@@ -142,6 +145,10 @@ emissionFactors:
       source: eGrid 2023
       value: 398.6011426902413
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -177,6 +184,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 699.4161197629264
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -223,6 +234,10 @@ emissionFactors:
       value: 592.15
     biomass:
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
@@ -236,9 +251,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1062.1123579
+      source: eGrid 2020; IPCC 2014
+      value: 1024.3118179231524
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1000.1477267918307
@@ -251,7 +265,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 506.3298038
+      value: 506.32980375424796
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 507.4041558239329
@@ -262,6 +276,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 518.6011426902413
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -309,6 +327,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
