--- a/config/zones/US-FLA-TEC.yaml
+++ b/config/zones/US-FLA-TEC.yaml
@@ -213,7 +213,7 @@ emissionFactors:
       value: 510.62387145096113
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -225,6 +225,10 @@ emissionFactors:
       source: BEIS 2021
       value: 0.0
     coal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 863.1977405560416
@@ -238,7 +242,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 432.8237021
+      value: 432.8237020849235
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 360.33756303006584
@@ -249,6 +253,10 @@ emissionFactors:
       source: eGrid 2023
       value: 424.97579700591865
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -284,6 +292,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 510.62387145096113
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -329,9 +341,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 472.26
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1248.927719
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -349,6 +362,10 @@ emissionFactors:
       source: IPCC 2014; Oberschelp, Christopher, et al. "Global emission hotspots
         of coal power generation."
       value: 866.085401
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 923.1977405560416
@@ -362,7 +379,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 552.8237021
+      value: 552.8237020849235
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 480.33756303006584
@@ -373,6 +390,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 544.9757970059186
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -420,6 +441,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
