--- a/config/zones/PR.yaml
+++ b/config/zones/PR.yaml
@@ -109,7 +109,7 @@ emissionFactors:
       value: 691.6232949567844
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -123,7 +123,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 995.61187
+      value: 995.611869962089
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1014.2941036716782
@@ -136,7 +136,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 480.1222048
+      value: 480.12220481693174
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 527.7229942577874
@@ -147,6 +147,10 @@ emissionFactors:
       source: eGrid 2023
       value: 544.6086048281159
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -184,7 +188,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 786.0859158
+      value: 786.0859157554912
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 769.7242211326042
@@ -219,6 +223,10 @@ emissionFactors:
       value: 606.54
     biomass:
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
@@ -231,6 +239,9 @@ emissionFactors:
       source: eGrid 2023
       value: 282.7016835752059
     coal:
+    - datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1055.611869962089
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1074.2941036716782
@@ -241,6 +252,9 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 1086.7228249260704
     gas:
+    - datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 600.1222048169318
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 647.7229942577874
@@ -251,6 +265,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 664.6086048281159
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -286,6 +304,9 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 606.54
     oil:
+    - datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1030.0859157554912
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1013.7242211326042
