--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -167,7 +167,7 @@ emissionFactors:
       value: 493.0079136484788
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -179,6 +179,10 @@ emissionFactors:
       source: BEIS 2021
       value: 0.0
     coal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -194,7 +198,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 471.3724863
+      value: 471.372486346701
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 484.4162449973497
@@ -207,7 +211,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 56.8894463
+      value: 56.889446297258615
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 88.15169296086768
@@ -240,6 +244,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 493.0079136484788
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -285,9 +293,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 504.89
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 39.38869109
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -305,6 +314,10 @@ emissionFactors:
       source: IPCC 2014
       value: 820.0
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1044.16897110535
@@ -319,7 +332,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 591.3724863
+      value: 591.372486346701
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 604.4162449973496
@@ -332,7 +345,7 @@ emissionFactors:
     geothermal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 94.8894463
+      value: 94.88944629725862
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 126.15169296086768
@@ -377,6 +390,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
