--- a/config/zones/US-CAR-DUK.yaml
+++ b/config/zones/US-CAR-DUK.yaml
@@ -373,6 +373,9 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 256.66970547913576
     biomass:
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -385,7 +388,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 856.3493858
+      value: 850.8991772198257
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 774.4313315061296
@@ -399,7 +402,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 396.0379906
+      value: 396.0379906292856
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 399.1356021822794
@@ -410,6 +413,10 @@ emissionFactors:
       source: eGrid 2023
       value: 502.631898437239
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -445,6 +452,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 256.66970547913576
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -490,6 +501,10 @@ emissionFactors:
       value: 306.16
     biomass:
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
@@ -503,9 +518,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 941.3628778000001
+      source: eGrid 2020; IPCC 2014
+      value: 910.8991772198257
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 834.4313315061296
@@ -519,7 +533,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 516.0379906000001
+      value: 516.0379906292856
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 519.1356021822794
@@ -530,6 +544,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 622.631898437239
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -577,6 +595,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
