--- a/config/zones/US-CAR-SC.yaml
+++ b/config/zones/US-CAR-SC.yaml
@@ -137,7 +137,7 @@ emissionFactors:
       value: 565.7753046389483
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -151,7 +151,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1072.534134
+      value: 1072.534133734033
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1060.5558582806743
@@ -164,7 +164,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 442.9124649
+      value: 442.9124649151213
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 445.80200911803314
@@ -175,6 +175,10 @@ emissionFactors:
       source: eGrid 2023
       value: 471.2653214613073
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -210,6 +214,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 565.7753046389483
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -254,9 +262,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 645.75
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 53.68073353
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -271,9 +280,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1165.692392
+      source: eGrid 2020; IPCC 2014
+      value: 1132.534133734033
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1120.5558582806743
@@ -286,7 +294,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 562.9124649
+      value: 562.9124649151213
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 565.8020091180331
@@ -297,6 +305,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 591.2653214613073
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -344,6 +356,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
