--- a/config/zones/US-CAR-SCEG.yaml
+++ b/config/zones/US-CAR-SCEG.yaml
@@ -231,7 +231,7 @@ emissionFactors:
       value: 359.73740517000465
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -245,7 +245,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 849.2213607
+      value: 934.0795381890217
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 946.9012095380552
@@ -258,7 +258,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 407.4177138
+      value: 407.41771383688
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 462.3141304645547
@@ -269,6 +269,10 @@ emissionFactors:
       source: eGrid 2023
       value: 436.0425147557432
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -304,6 +308,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 359.73740517000465
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -348,9 +356,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 459.98
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 90.54773858
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -365,9 +374,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 932.0702837
+      source: eGrid 2020; IPCC 2014
+      value: 994.0795381890217
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1006.9012095380552
@@ -380,7 +388,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 527.4177138
+      value: 527.41771383688
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 582.3141304645546
@@ -391,6 +399,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 556.0425147557432
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -438,6 +450,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
