--- a/config/zones/US-FLA-FPL.yaml
+++ b/config/zones/US-FLA-FPL.yaml
@@ -236,7 +236,7 @@ emissionFactors:
       value: 311.44269883203356
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -248,6 +248,10 @@ emissionFactors:
       source: BEIS 2021
       value: 0.0
     coal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -263,7 +267,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 367.4893706
+      value: 367.48937057919414
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 365.6611442526231
@@ -274,6 +278,10 @@ emissionFactors:
       source: eGrid 2023
       value: 367.9628636512186
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -311,7 +319,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 390.0504417
+      value: 390.05044165621
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 450.5327899842862
@@ -354,9 +362,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 369.33
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 902.3445824
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -374,6 +383,10 @@ emissionFactors:
       source: IPCC 2014
       value: 820.0
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1044.16897110535
@@ -388,7 +401,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 487.4893706
+      value: 487.48937057919414
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 485.6611442526231
@@ -399,6 +412,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 487.9628636512186
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -445,7 +462,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 634.0504417
+      value: 634.0504416562101
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 694.5327899842862
