--- a/config/zones/US-FLA-GVL.yaml
+++ b/config/zones/US-FLA-GVL.yaml
@@ -113,7 +113,7 @@ emissionFactors:
       value: 600.8070125698916
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -127,7 +127,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 877.6982215
+      value: 877.6982215318458
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 847.0060140972408
@@ -142,7 +142,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 457.6172075
+      value: 457.6172075069577
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 474.33858230699275
@@ -153,6 +153,10 @@ emissionFactors:
       source: eGrid 2023
       value: 652.0530377690332
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -188,6 +192,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 600.8070125698916
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -233,9 +241,10 @@ emissionFactors:
       source: Electricity Maps, 2024 average
       value: 573.1
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 424.0835095
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -250,9 +259,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 972.4589745000001
+      source: eGrid 2020; IPCC 2014
+      value: 937.6982215318458
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 907.0060140972408
@@ -267,7 +275,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 577.6172075
+      value: 577.6172075069577
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 594.3385823069927
@@ -278,6 +286,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 772.0530377690332
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -325,6 +337,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
