--- a/config/zones/US-NW-GRID.yaml
+++ b/config/zones/US-NW-GRID.yaml
@@ -85,6 +85,9 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 450.83303127459374
     biomass:
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -95,6 +98,10 @@ emissionFactors:
       source: BEIS 2021
       value: 0.0
     coal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -108,9 +115,10 @@ emissionFactors:
       source: eGrid 2023
       value: 1019.6370786222118
     gas:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 395.5270557
+      value: 406.0343467262286
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 394.7851977921214
@@ -121,6 +129,10 @@ emissionFactors:
       source: eGrid 2023
       value: 399.2745381859123
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -156,6 +168,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 450.83303127459374
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -202,6 +218,10 @@ emissionFactors:
       value: 490.66
     biomass:
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
@@ -218,6 +238,10 @@ emissionFactors:
       source: IPCC 2014
       value: 820.0
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1044.16897110535
@@ -230,9 +254,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 1079.637078622212
     gas:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 515.5270557
+      value: 526.0343467262286
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 514.7851977921214
@@ -243,6 +268,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 519.2745381859123
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -290,6 +319,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
