--- a/config/zones/US-NW-PACW.yaml
+++ b/config/zones/US-NW-PACW.yaml
@@ -219,7 +219,7 @@ emissionFactors:
       value: 346.2845545248079
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -231,6 +231,10 @@ emissionFactors:
       source: BEIS 2021
       value: 0.0
     coal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 991.3927748632145
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -246,7 +250,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 400.6744614
+      value: 401.3274363408074
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 404.12602180659843
@@ -257,6 +261,10 @@ emissionFactors:
       source: eGrid 2023
       value: 401.38927523144184
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -292,6 +300,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 346.2845545248079
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -334,9 +346,10 @@ emissionFactors:
       source: Electricity Maps, 2023 average
       value: 269.51
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 29.16184216
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -355,6 +368,10 @@ emissionFactors:
         of coal power generation."
       value: 811.451201
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1051.3927748632145
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1044.16897110535
@@ -369,7 +386,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 520.6744613999999
+      value: 521.3274363408075
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 524.1260218065984
@@ -380,6 +397,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 521.3892752314418
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -424,6 +445,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
