--- a/config/zones/US-NY-NYIS.yaml
+++ b/config/zones/US-NY-NYIS.yaml
@@ -696,7 +696,7 @@ emissionFactors:
       value: 201.96505688874868
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -710,7 +710,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1095.578562
+      value: 1095.5785620809695
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -726,7 +726,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 412.8877102
+      value: 412.8877102227465
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 412.8088445158036
@@ -737,6 +737,10 @@ emissionFactors:
       source: eGrid 2023
       value: 417.41468220380995
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -774,7 +778,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 662.0576145
+      value: 662.057614498095
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 503.5012255171227
@@ -814,9 +818,10 @@ emissionFactors:
       source: Electricity Maps, 2023 average
       value: 281.42
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 667.6942738
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -831,9 +836,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1179.0563129999998
+      source: eGrid 2020; IPCC 2014
+      value: 1155.5785620809695
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -849,7 +853,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 532.8877102
+      value: 532.8877102227465
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 532.8088445158037
@@ -860,6 +864,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 537.4146822038099
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -903,7 +911,7 @@ emissionFactors:
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 906.0576145
+      value: 906.057614498095
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 747.5012255171227
