--- a/config/zones/US-SW-AZPS.yaml
+++ b/config/zones/US-SW-AZPS.yaml
@@ -213,7 +213,7 @@ emissionFactors:
       value: 394.89508781910087
     biomass:
     - datetime: '2020-01-01'
-      source: eGrid 2020
+      source: BEIS 2021
       value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
@@ -227,7 +227,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1055.103824
+      value: 1055.103823874164
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1030.782226173178
@@ -240,7 +240,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 371.3656203
+      value: 371.36562029179186
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 362.6564678883666
@@ -251,6 +251,10 @@ emissionFactors:
       source: eGrid 2023
       value: 335.1262756050809
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -286,6 +290,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 394.89508781910087
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -328,9 +336,10 @@ emissionFactors:
       source: Electricity Maps, 2023 average
       value: 430.05
     biomass:
-    - datetime: '2020-01-01'
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
       source: eGrid 2020
-      value: 34.52335329
+      value: 281.38853074481284
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -345,9 +354,8 @@ emissionFactors:
       value: 282.7016835752059
     coal:
     - datetime: '2020-01-01'
-      source: eGrid 2020; Oberschelp, Christopher, et al. "Global emission hotspots
-        of coal power generation."
-      value: 1072.158303
+      source: eGrid 2020; IPCC 2014
+      value: 1115.103823874164
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1090.782226173178
@@ -360,7 +368,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 491.3656203
+      value: 491.36562029179186
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 482.6564678883666
@@ -371,6 +379,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 455.1262756050809
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -415,6 +427,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
