--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -190,6 +190,9 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 240.19057250496743
     biomass:
+    - datetime: '2020-01-01'
+      source: BEIS 2021
+      value: 0.0
     - datetime: '2021-01-01'
       source: BEIS 2021
       value: 0.0
@@ -202,7 +205,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 1218.520193
+      value: 1218.5201933237183
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 1158.447444803718
@@ -215,7 +218,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020
-      value: 376.0036772
+      value: 377.65928159519075
     - datetime: '2021-01-01'
       source: eGrid 2021
       value: 385.40906841862005
@@ -226,6 +229,10 @@ emissionFactors:
       source: eGrid 2023
       value: 414.8222825456002
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 70.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -261,6 +268,10 @@ emissionFactors:
       source: Electricity Maps, 2021 average
       value: 240.19057250496743
     oil:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 803.8986689024886
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
@@ -304,6 +315,10 @@ emissionFactors:
       value: 304.7
     biomass:
     - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020
+      value: 281.38853074481284
+    - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021
       value: 280.6015234636058
@@ -318,7 +333,7 @@ emissionFactors:
     coal:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 1278.520193
+      value: 1278.5201933237183
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 1218.447444803718
@@ -331,7 +346,7 @@ emissionFactors:
     gas:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
-      value: 496.0036772
+      value: 497.65928159519075
     - datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
       value: 505.40906841862005
@@ -342,6 +357,10 @@ emissionFactors:
       source: eGrid 2023; IPCC 2014
       value: 534.8222825456003
     geothermal:
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 108.87985131255388
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
@@ -386,6 +405,10 @@ emissionFactors:
     - datetime: '2014-01-01'
       source: IPCC 2014; EIA 2020/BEIS 2021
       value: 650.0
+    - _comment: Mean of all US zones
+      datetime: '2020-01-01'
+      source: eGrid 2020; IPCC 2014
+      value: 1047.8986689024887
     - _comment: Mean of all US zones
       datetime: '2021-01-01'
       source: eGrid 2021; IPCC 2014
